--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.TestsApp"
         tools:targetApi="31">
         <activity
+            android:name=".MyTestsSolves"
+            android:exported="false" />
+        <activity
+            android:name=".MyTests"
+            android:exported="false" />
+        <activity
             android:name=".Results"
             android:exported="false" />
         <activity
